Fixed css so that line-breaks would be visible in comments on queries admin interface.

--- a/static/css/theme.less
+++ b/static/css/theme.less
@@ -662,6 +662,14 @@ body.listing                        {
 
 }
 
+/*--queries admin interface---------------------------------------*/
+body.listing.queries                {
+    td.user-comment,
+    td.my-comment,
+    td.User.Comment,
+    td.My.Comment                   {white-space: pre-wrap;
+    }
+}
 
 /*-- classlists --------------------------------------------------*/
 body.user                           {
